name:                openssh-github-keys
version:             0.1.0.0
synopsis:            Fetch OpenSSH keys from a Github team
description:
  .
  This package fetches the OpenSSH public keys for all users from a
  Github team. It is intended to be executed from the AuthorizedKeys
  command in the sshd_config file, which then allows users to log in
  using keys that they have in their Github accounts.
  .
homepage:            https://github.com/stackbuilders/openssh-github-keys
license:             MIT
license-file:        LICENSE
author:              Stack Builders
maintainer:          hackage@stackbuilders.com
copyright:           2015 Stack Builders Inc.
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Homepage:            https://github.com/stackbuilders/openssh-github-keys
Bug-reports:         https://github.com/stackbuilders/openssh-github-keys/issues

executable openssh-github-keys
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.5 && <4.8
                       , octohat >=0.1.2
                       , dotenv
                       , text
                       , optparse-applicative
                       , directory
                       , filepath
                       , unix

  hs-source-dirs:      src
  ghc-options:         -Wall

  default-language:    Haskell2010

library
  exposed-modules:    System.OpensshGithubKeys

  build-depends:         base >=4.5 && <4.8
                       , octohat >=0.1.2
                       , text

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


test-suite openssh-github-keys-test
  type: exitcode-stdio-1.0
  hs-source-dirs: spec, src
  main-is: Spec.hs
  build-depends:       base >=4.5 && <4.8
                       , octohat >=0.1.2
                       , text

                       , hspec

  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type: git
  location: https://github.com/stackbuilders/openssh-github-keys
