name:                 openssh-github-keys
version:              0.1.1.0
synopsis:             Fetch OpenSSH keys from a GitHub team
description:
  .
  This package fetches the OpenSSH public keys for all users from a
  GitHub team. It is intended to be executed from the AuthorizedKeys
  command in the sshd_config file, which then allows users to log in
  using keys that they have in their Github accounts.
  .

  Please see the
  <https://github.com/stackbuilders/openssh-github-keys GitHub page>
  for detailed usage information.
  .
homepage:             https://github.com/stackbuilders/openssh-github-keys
bug-reports:          https://github.com/stackbuilders/openssh-github-keys/issues
license:              MIT
license-file:         LICENSE.md
author:               Stack Builders
maintainer:           hackage@stackbuilders.com
copyright:            2015-2017 Stack Builders Inc.
category:             System
build-type:           Simple
cabal-version:        >=1.10
extra-doc-files:      CHANGELOG.md
                    , README.md

source-repository head
  type:               git
  location:           https://github.com/stackbuilders/openssh-github-keys.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  hs-source-dirs:     src
  exposed-modules:    System.OpensshGithubKeys
  build-depends:      aeson            >= 0.9    && < 1.2
                    , base             >= 4.7    && < 5.0
                    , bytestring       >= 0.2    && < 0.11
                    , req              >= 0.2    && < 0.3
                    , text             >= 1.2    && < 1.3
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010

executable openssh-github-keys
  main-is:            Main.hs
  other-modules:      Config
  hs-source-dirs:     app
  build-depends:      aeson            >= 0.9    && < 1.2
                    , base             >= 4.7    && < 5.0
                    , bytestring       >= 0.2    && < 0.11
                    , directory        >= 1.2.2  && < 1.4
                    , dotenv           >= 0.3.1  && < 0.4
                    , filepath         >= 1.2    && < 1.5
                    , openssh-github-keys
                    , optparse-applicative >= 0.11.0.2 && < 0.14
                    , req              >= 0.2    && < 0.3
                    , text             >= 1.2    && < 1.3
                    , yaml             >= 0.8    && < 0.9
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     spec
  main-is:            Spec.hs
  other-modules:      System.OpensshGithubKeysSpec
  build-depends:      base             >= 4.7    && < 5.0
                    , hspec            >= 2.0    && < 3.0
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:    Haskell2010
